--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -6,7 +6,7 @@ $colorBody: rgba(19, 42, 121, 0.773);
 %videoSoleil {
     display: none;
     border: 0.7px solid black;
-    width: 400px;
+    width: 90%;
     border-radius: 10px;
     margin: auto;
 }
@@ -54,8 +54,8 @@ iframe {
     //border: 1px solid white;
     //background-color: rgba(183, 210, 214, 0.1);
     //border-radius: 10px;
-    width: 400px;
-    //width: 70%;
+    //width: 400px;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0.5%;
