--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -4,8 +4,8 @@ html(lang="en")
     block head
       title IBM RPG &amp; Javascript Developer
       meta(charset="UTF-8")
-      meta(name="viewport", content="width=device-width, initial-scale=0.7")
-      meta(http-equiv="X-UA-Compatible", content="ie=edge")
+      meta(name="viewport", content="width=device-width, initial-scale=0.6")
+      //meta(http-equiv="X-UA-Compatible", content="ie=edge")
       meta(name='description' content='My Javascript Portfolio')
       meta(property='og:title' content='IBM RPG & Javascript Developer')
       meta(property='og:type' content='image')
@@ -22,8 +22,8 @@ html(lang="en")
           a#intro.nav(rel='preconnect' href='/' class='css3button') Intro
         li
           a#resume.nav(rel='preconnect' href='/cv' class='css3button') CV
-        //li
-          //a#admin.nav(rel='preconnect' href='/nomPage?r=adm1n' class='css3button') aL1v3
+        li
+          a#admin.nav(rel='preconnect' href='/adm1n' class='css3button') aL1v3
         li
           a#adhd.nav(rel='preconnect' href='/giftedADHD' class='css3button') ADHD
     block content
