--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -4,8 +4,8 @@ html(lang="en")
     block head
       title IBM RPG &amp; Javascript Developer
       meta(charset="UTF-8")
-      meta(name="viewport", content="width=device-width, initial-scale=0.6")
-      //meta(http-equiv="X-UA-Compatible", content="ie=edge")
+      meta(name="viewport" content="width=device-width, initial-scale=0.6")
+      //meta(http-equiv="X-UA-Compatible" content="ie=edge")
       meta(name='description' content='My Javascript Portfolio')
       meta(property='og:title' content='IBM RPG & Javascript Developer')
       meta(property='og:type' content='image')
@@ -29,13 +29,12 @@ html(lang="en")
     block content
     block foot
       #footer
-          a.minilogL(rel='preconnect' href='https://github.com/m1k431')
-            img(src='/static/img/gitHubMark.png' alt='git' height='35')
-            img(src='/static/img/gitHubW.png' alt='git' height='35')
-          a.minilogR(rel='preconnect' href='https://www.linkedin.com/in/mika%C3%ABl-garcia/')
-            img(src='/static/img/LinkedIn_Logo.svg' alt='linkedin' height='35')
+        a.minilogL(rel='preconnect' href='https://github.com/m1k431')
+          img(src='/static/img/gitHubMark.png' alt='git' height='35')
+          img(src='/static/img/gitHubW.png' alt='git' height='35')
+        a.minilogR(rel='preconnect' href='https://www.linkedin.com/in/mika%C3%ABl-garcia/')
+          img(src='/static/img/LinkedIn_Logo.svg' alt='linkedin' height='35')
     block scripts
       script(src='/static/js/jquery-3.3.1.min.js')
       script(src='/static/js/jquery-ui.min.js')
       script(src='/static/js/socket.io.js' async)
-      //script(src='/static/js/layoutNav.js')
