update stayin' /heroku

--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -8,18 +8,18 @@ append content
           script(async='' defer='' crossorigin='anonymous' src='https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v7.0' nonce='N4lKtp2e')
           a(href="https://facebook.com/search/top?q=jean-michel%20daugé") Jean-Michel Daugé
           a(href="https://www.facebook.com/karine.applincourt.7") Karine Applincourt
-          //2965750440209401
-          h1.liens PC SECURITE 
-          | Photographie prise en réanimation début septembre 2019, après avoir réussi à m'échapper par ma fenêtre le 26 août 2019 avec ma trotinnette electrique,
-          |  alors que la police essayait d'entrer par la force dans mon logement.
-          | Je me souviens que le voisin du premier leur a indiqué ma fuite par la fenêtre (vidéo du voisin en mode "footing ci-dessous").
-          | Apparement j'aurai été retrouvé en arrêt cardio-respiratoire (15min) à l'arrivée des soignants.
-          | Depuis je suis harcelé, volé et tabassé par ce même voisin qui semble avoir beaucoup de famille dans la police.
-          | N'hésitant pas à me tendre des embuscades en coupant l'electricité de mon logement au 2eme etage depuis le rez de chausser.
-          | Depuis qu'ils sont rentré chez moi me frapper, la police de montauban me harcèle pour une histoire de volet hors d'usage.
-          | Quand je me suis rendu au poste de police pour signer ma pré-plainte en ligne j'ai été placé en garde à vue avant d'être fait interner d'office sur demande de Brigitte Bareges.
-          br
-          iframe(src='https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fposts%2F2971859896265122&width=500' style='border:none;overflow:hidden' scrolling='no' allowtransparency='true' allow='encrypted-media' width='280' height='480' frameborder='0')
+          //-2965750440209401
+            h1.liens PC SECURITE 
+            | Photographie prise en réanimation début septembre 2019, après avoir réussi à m'échapper par ma fenêtre le 26 août 2019 avec ma trotinnette electrique,
+            |  alors que la police essayait d'entrer par la force dans mon logement.
+            | Je me souviens que le voisin du premier leur a indiqué ma fuite par la fenêtre (vidéo du voisin en mode "footing ci-dessous").
+            | Apparement j'aurai été retrouvé en arrêt cardio-respiratoire (15min) à l'arrivée des soignants.
+            | Depuis je suis harcelé, volé et tabassé par ce même voisin qui semble avoir beaucoup de famille dans la police.
+            | N'hésitant pas à me tendre des embuscades en coupant l'electricité de mon logement au 2eme etage depuis le rez de chausser.
+            | Depuis qu'ils sont rentré chez moi me frapper, la police de montauban me harcèle pour une histoire de volet hors d'usage.
+            | Quand je me suis rendu au poste de police pour signer ma pré-plainte en ligne j'ai été placé en garde à vue avant d'être fait interner d'office sur demande de Brigitte Bareges.
+            br
+            iframe(src='https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fposts%2F2971859896265122&width=500' style='border:none;overflow:hidden' scrolling='no' allowtransparency='true' allow='encrypted-media' width='280' height='480' frameborder='0')
           br 
           h1 Aggression à mon domicile par les voisins d'en face (serge) et du dessus (jean-michel) après ma garde à vue et vol de ma camera xiaomi.
           iframe(src='https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fposts%2F3104734596310984&width=500' style='border:none;overflow:hidden' scrolling='no' allowtransparency='true' allow='encrypted-media' width='280' height='480' frameborder='0')
@@ -69,13 +69,13 @@ append content
           br
           | "T'embrasseras ta mère pour moi" il s'agit donc d'un des policiers nationnaux en charge de l'affaire concernant mon homicide le 26 août 2019.
           |  il s'amuse également en fin de vidéo du dsyfonctionnement de ma précédente montre android wear depuis ma mise en garde à vue durant le confinement #COVID pour avoir voulu déposer plainte.
-          //@Emmanuel et Brigitte MACRON
-          h1.liens Visite du Président de la Russie aux Macrons lors de leurs vacances estivales
-          br
-          iframe(src='https://www.youtube.com/embed/8wl2ddpwEhI' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='' width='480' height='300' frameborder='0')
-          br
-          |  J'espère sincèrement que vous avez davantage respecté le président Vladimir Putin
-          |  hors caméra.
+          //-@Emmanuel et Brigitte MACRON
+            h1.liens Visite du Président de la Russie aux Macrons lors de leurs vacances estivales
+            br
+            iframe(src='https://www.youtube.com/embed/8wl2ddpwEhI' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='' width='480' height='300' frameborder='0')
+            br
+            |  J'espère sincèrement que vous avez davantage respecté le président Vladimir Putin
+            |  hors caméra.
           br
           iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2981340468650398%2F&width=1280' width='480' height='340' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
           br
