--- a/public/css/scss/cv.scss
+++ b/public/css/scss/cv.scss
@@ -29,7 +29,7 @@ li {
 $$$$$$  BALISES HTML   $$$$$
 ****/
 #CV {
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   border-radius: 10px;
 }
 
@@ -42,7 +42,7 @@ $$$$$$  BALISES HTML   $$$$$
   margin-bottom: 1%;
   margin-left: 15%;
   margin-right: 15%;
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
 }
 
 .backgroundRed {
@@ -50,7 +50,7 @@ $$$$$$  BALISES HTML   $$$$$
   text-align: center;
   font-family: monospace;
   background-color: rgba(245, 245, 245, 1);
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   border-radius: 10px;
   margin-top: 1%;
   margin-bottom: 1%;
@@ -140,7 +140,7 @@ html {
 
 .moi {
   margin: 1%;
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
   //display: none;
@@ -155,14 +155,14 @@ html {
 
 .complementaireT {
   margin: 1%;
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
 }
 
 .linkedinT {
   display: none;
-  border: 2px solid #08021f;
+  border: 2px solid #ffffff;
   position: absolute;
   border-radius: 10px;
   height: 25px;
@@ -173,7 +173,7 @@ html {
 
 .experiencesT {
   display: none;
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   color: rgba(0, 0, 0, 0.9);
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
@@ -187,7 +187,7 @@ html {
 
 .formationT {
   display: none;
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   color: rgba(0, 0, 0, 0.9);
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
@@ -242,7 +242,7 @@ p.flags {
 }
 
 .competencesJeu {
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   color: rgba(0, 0, 0, 0.9);
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
@@ -255,7 +255,7 @@ p.flags {
 }
 
 .competences {
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   color: rgba(0, 0, 0, 0.9);
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
@@ -266,7 +266,8 @@ p.flags {
 }
 
 .competen {
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
   color: rgba(0, 0, 0, 0.9);
   border-radius: 10px;
   margin: 1%;
@@ -278,12 +279,12 @@ p.flags {
   margin-left: 20%;
   margin-right: 20%;
   margin-top: 0;
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   border-radius: 10px;
 }
 
 .competencesT {
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   color: rgba(0, 0, 0, 0.9);
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
