--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -26,7 +26,7 @@ li {
 $$$$$$  BALISES HTML   $$$$$
 ****/
 #CV {
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   border-radius: 10px;
 }
 
@@ -39,14 +39,14 @@ $$$$$$  BALISES HTML   $$$$$
   margin-bottom: 1%;
   margin-left: 15%;
   margin-right: 15%;
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
 }
 
 .backgroundRed {
   text-align: center;
   font-family: monospace;
   background-color: whitesmoke;
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   border-radius: 10px;
   margin-top: 1%;
   margin-bottom: 1%;
@@ -131,7 +131,7 @@ html {
 
 .moi {
   margin: 1%;
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
 }
@@ -145,14 +145,14 @@ html {
 
 .complementaireT {
   margin: 1%;
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
 }
 
 .linkedinT {
   display: none;
-  border: 2px solid #08021f;
+  border: 2px solid #ffffff;
   position: absolute;
   border-radius: 10px;
   height: 25px;
@@ -163,7 +163,7 @@ html {
 
 .experiencesT {
   display: none;
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   color: rgba(0, 0, 0, 0.9);
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
@@ -177,7 +177,7 @@ html {
 
 .formationT {
   display: none;
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   color: rgba(0, 0, 0, 0.9);
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
@@ -232,7 +232,7 @@ p.flags {
 }
 
 .competencesJeu {
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   color: rgba(0, 0, 0, 0.9);
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
@@ -245,7 +245,7 @@ p.flags {
 }
 
 .competences {
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   color: rgba(0, 0, 0, 0.9);
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
@@ -256,7 +256,8 @@ p.flags {
 }
 
 .competen {
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
   color: rgba(0, 0, 0, 0.9);
   border-radius: 10px;
   margin: 1%;
@@ -268,12 +269,12 @@ p.flags {
   margin-left: 20%;
   margin-right: 20%;
   margin-top: 0;
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   border-radius: 10px;
 }
 
 .competencesT {
-  border: 1px solid #08021f;
+  border: 1px solid #ffffff;
   color: rgba(0, 0, 0, 0.9);
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
