--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -366,6 +366,7 @@ iframe {
 
 #INDEX {
   border: 1px solid white;
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
   text-align: center;
   width: 90%;
