--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -1,7 +1,7 @@
 @import "normalize";
 
 $myFont: monospace;
-$colorBody: rgba(76, 122, 223, 0.99);
+$colorBody: rgba(2, 106, 243, 0.99);
 
 %videoSoleil {
     display: none;
@@ -18,13 +18,35 @@ $colorBody: rgba(76, 122, 223, 0.99);
     padding: 5px 2px 7px 2px;
 }
 
-body {
-    background-color: $colorBody;
+body,
+html {
     height: 100%;
 }
 
-html {
+body {
+    //display: flex;
+    align-items: center;
+    background-color: $colorBody;
+}
+
+.background {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+}
+
+.content {
+    display: table;
     height: 100%;
+    //width: 94%;
+    //margin-left: 3%;
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 50px;
+    box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
 }
 
 iframe {
@@ -43,7 +65,7 @@ iframe {
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 10px;
     text-align: center;
-    width: 90%;
+    //width: 90%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0.5%;
@@ -56,7 +78,7 @@ iframe {
     //background-color: rgba(183, 210, 214, 0.1);
     //border-radius: 10px;
     //width: 400px;
-    width: 90%;
+    //width: 90%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0.5%;
@@ -114,11 +136,11 @@ nav {
         padding: 0;
         list-style: none;
     }
-
+    
     li {
         display: inline-block;
     }
-
+    
     a {
         text-decoration: none;
     }
@@ -187,13 +209,6 @@ a {
 .css3buttonRed:hover {
     background-image: linear-gradient(to bottom, rgba(253, 60, 60, 0.8), rgba(230, 49, 49, 0.9));
     text-decoration: none;
-}
-
-.content {
-    display: table;
-    height: 100%;
-    width: 94%;
-    margin-left: 3%;
 }
 
 .table-cell {
