--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -345,13 +345,32 @@ template {
   padding: 5px 2px 7px 2px;
 }
 
-body {
-  background-color: rgba(76, 122, 223, 0.99);
+body,
+html {
   height: 100%;
 }
 
-html {
+body {
+  align-items: center;
+  background-color: rgba(2, 106, 243, 0.99);
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
+
+.content {
+  display: table;
   height: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 50px;
+  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
 }
 
 iframe {
@@ -369,7 +388,6 @@ iframe {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
   text-align: center;
-  width: 90%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0.5%;
@@ -377,7 +395,6 @@ iframe {
 }
 
 #CV {
-  width: 90%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0.5%;
@@ -496,13 +513,6 @@ a {
 .css3buttonRed:hover {
   background-image: linear-gradient(to bottom, rgba(253, 60, 60, 0.8), rgba(230, 49, 49, 0.9));
   text-decoration: none;
-}
-
-.content {
-  display: table;
-  height: 100%;
-  width: 94%;
-  margin-left: 3%;
 }
 
 .table-cell {
