--- a/public/index.pug
+++ b/public/index.pug
@@ -23,8 +23,8 @@ append content
 append scripts
   script(async='' src='//embed.redditmedia.com/widgets/platform.js' charset='UTF-8')
   script(async='' src='https://platform.twitter.com/widgets.js' charset='utf-8')
-  script(src='/static/js/soleil.js' async)
-  script(src='/static/js/BrickBreaker.js' async)
+  script(src='/static/js/soleil.js')
+  script(src='/static/js/BrickBreaker.js')
   script.
     $('#intro').removeClass('css3button')
     $('#intro').addClass('css3buttonRed')
