--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -43,7 +43,7 @@ body {
     height: 100%;
     //width: 94%;
     //margin-left: 3%;
-    max-width: 500px;
+    //max-width: 500px;
     margin: 0 auto;
     padding: 50px;
     box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
@@ -78,7 +78,7 @@ iframe {
     //background-color: rgba(183, 210, 214, 0.1);
     //border-radius: 10px;
     //width: 400px;
-    //width: 90%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0.5%;
