--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -367,7 +367,6 @@ body {
 .content {
   display: table;
   height: 100%;
-  max-width: 500px;
   margin: 0 auto;
   padding: 50px;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
@@ -395,6 +394,7 @@ iframe {
 }
 
 #CV {
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0.5%;
