--- a/public/index.pug
+++ b/public/index.pug
@@ -6,16 +6,17 @@ append content
         .m0ncentrageParafoot
           #INDEX
             h1 Welcome to my devlab
+            h2 My name is Mikael 
             video#jugglejungle(playsinline autoplay muted loop poster='/static/img/kuansiFalls.webp')
               source( src='/static/video/theOneFinal.webm' type='video/webm')
             //button#BtnJs0nPl4Y PLAY
-            .paraFoot My name is 
-              a.twitter-follow-button(href='https://twitter.com/K431M1?ref_src=twsrc%5Etfw' data-size='large' data-show-count='false') Follow @K431M1
-            #s0leil
-            .paraFoot I'm an IBM RPG &amp; Javascript Developer
+            a.twitter-follow-button(href='https://twitter.com/K431M1?ref_src=twsrc%5Etfw' data-size='large' data-show-count='false') Follow @K431M1
+            h3 I'm an IBM RPG &amp; Javascript Developer
             include jeuCV.pug
             .paraFoot This website hosts my skills, projects and experiences.
-            #divTwitter
+            #s0leil
+            br
+            //#divTwitter
               a.twitter-timeline(data-width='90%' data-height='500px' data-chrome="transparent border" data-theme='' href='https://twitter.com/K431M1?ref_src=K431M1') Tweets by M1K431
       //noborders noheader nofooter
       //include joust.pug
@@ -25,6 +26,7 @@ append scripts
   script(async='' src='https://platform.twitter.com/widgets.js' charset='utf-8')
   script(src='/static/js/soleil.js')
   script(src='/static/js/BrickBreaker.js')
+  script(src='/static/js/layoutNav.js')
   script.
     $('#intro').removeClass('css3button')
     $('#intro').addClass('css3buttonRed')
