--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -43,9 +43,9 @@ body {
     height: 100%;
     //width: 94%;
     //margin-left: 3%;
-    //max-width: 500px;
+    max-width: 800px;
     margin: 0 auto;
-    padding: 50px;
+    padding: 0px;
     box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
 }
 
@@ -65,7 +65,7 @@ iframe {
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 10px;
     text-align: center;
-    //width: 90%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0.5%;
