--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -367,8 +367,9 @@ body {
 .content {
   display: table;
   height: 100%;
+  max-width: 800px;
   margin: 0 auto;
-  padding: 50px;
+  padding: 0px;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
 }
 
@@ -387,6 +388,7 @@ iframe {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
   text-align: center;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0.5%;
