play button firefox

--- a/public/index.pug
+++ b/public/index.pug
@@ -9,7 +9,7 @@ append content
             h2 My name is Mikael 
             video#jugglejungle(playsinline autoplay muted loop poster='/static/img/kuansiFalls.webp')
               source( src='/static/video/theOneFinal.webm' type='video/webm')
-            //button#BtnJs0nPl4Y PLAY
+            button#BtnJs0nPl4Y PLAY
             br
             a.twitter-follow-button(href='https://twitter.com/K431M1?ref_src=twsrc%5Etfw' data-size='large' data-show-count='false') Follow @K431M1
             h3 I'm an IBM RPG &amp; Javascript Developer
