--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -46,7 +46,7 @@ body {
     max-width: 800px;
     margin: 0 auto;
     padding: 0px;
-    box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
+    //box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
 }
 
 iframe {
@@ -62,7 +62,6 @@ iframe {
 #INDEX {
     //display: none;
     border: 1px solid white;
-    background-color: rgba(255, 255, 255, 0.1);
     border-radius: 10px;
     text-align: center;
     width: 90%;
@@ -174,7 +173,6 @@ a {
     margin-bottom: 10px;
     background: transparent;
     border: 1px solid white;
-    font-family: $myFont;
     //background-image: linear-gradient(to bottom, rgba(52, 60, 219, 0.476), rgba(43, 32, 173, 0.5));
 }
 
@@ -185,6 +183,8 @@ a {
 
 .css3button {
     @extend %css3Button;
+    font-family: $myFont;
+    font-size: 1.3em;
     background-image: linear-gradient(to bottom, rgba(52, 152, 219, 0.901), rgba(19, 43, 121, 0.5));
 }
 
@@ -200,7 +200,7 @@ a {
     margin-left: 5px;
     margin-right: 5px;
     color: white;
-    font-size: 1.1em;
+    font-size: 1.3em;
     text-align: center;
     font-family: $myFont;
     background-image: linear-gradient(to bottom, rgba(221, 60, 60, 0.9), rgba(221, 60, 60, 0.9));
