--- a/public/index.pug
+++ b/public/index.pug
@@ -6,16 +6,15 @@ append content
         .m0ncentrageParafoot
           #INDEX
             h1 Welcome to my devlab
-            h2 My name is Mikael 
             video#jugglejungle(playsinline autoplay muted loop poster='/static/img/kuansiFalls.webp')
               source( src='/static/video/theOneFinal.webm' type='video/webm')
             button#BtnJs0nPl4Y PLAY
-            br
-            a.twitter-follow-button(href='https://twitter.com/K431M1?ref_src=twsrc%5Etfw' data-size='large' data-show-count='false') Follow @K431M1
-            h3 I'm an IBM RPG &amp; Javascript Developer
+            h2 My name is Mikael 
+            h2 I am an IBM RPG &amp; Javascript Developer
             include jeuCV.pug
             .paraFoot This website hosts my skills, projects and experiences.
             #s0leil
+            a.twitter-follow-button(href='https://twitter.com/K431M1?ref_src=twsrc%5Etfw' data-size='large' data-show-count='false') Follow @K431M1
             br
       //include joust.pug
       //include adm1n.pug
