ibm fonts vs &eacute

--- a/public/cv.pug
+++ b/public/cv.pug
@@ -15,16 +15,16 @@ append content
           //p.moiPara +33 695 490 777
           //p.moiPara garcia.mikael@gmail.com
           #metier
-            h1 IBM RPG &amp; Javascript Developer
+            h1 IBM and Javascript Developer
           p.flags
             img#english(src='/static/img/uk.svg' alt='English' height='30')
             img#french(src='/static/img/france.svg' alt='Français' height='30')
           .competen#competen
-            h2.titreH2.french Comp&eacute;tences
+            h2.titreH2.french Competences
             h2.titreH2.english Skills
             h2.titreH2.spanish  Competencias
             .informatiquesCont.french.english.spanish
-              h3.titreH3 Front-End Development
+              h3.titreH3 Front-End
               .informatiques#informatique
                 .infoJeu ECMAScript 6
                 .infoJeu jade/PUG
@@ -33,7 +33,7 @@ append content
                 .infoJeu SCSS
                 .infoJeu BootStrap
                 .infoJeu AngularJS
-              h3.titreH3 Back-End Development
+              h3.titreH3 Back-End
               .informatiques#informatique
                 .infoJeu NodeJS
                 .infoJeu ExpressJS
@@ -50,9 +50,9 @@ append content
                 .infoJeu bsh/zsh
                 .infoJeu Photoshop
             .btp#btp.french.english.spanish
-              h3.titreH3.french Techniques &amp; Design
-              h3.titreH3.english Techniques &amp; Design
-              h3.titreH3.spanish Técnicas &amp; diseño
+              h3.titreH3.french Techniques Design
+              h3.titreH3.english Techniques Design
+              h3.titreH3.spanish Técnicas diseño
               .info.french R&eacute;aliser l&rsquo;&eacute;tude technique d&rsquo;un projet de construction et en estimer le co&ucirc;t
               .info.english Conduct the technical study of a construction project and estimate the cost
               .info.spanish Estudio técnico de un proyecto de construcción y estimación del costo
@@ -74,16 +74,16 @@ append content
               .infolast.english Incoming, service and commercial advice
               .infolast.spanish Recepción, servicio y asesoramiento comercial
           .competen#experiences
-            h2.titreH2.french Exp&eacute;riences
+            h2.titreH2.french Experiences
             h2.titreH2.english Experiences
             h2.titreH2.spanish Experiencia profesional
             .jobs
-              h3.titreH3 Développeur logiciel IBM i
+              h3.titreH3 Developpeur logiciel IBM i
               .infojob.french Développement sur IBM i (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban, depuis août 2019
               .infojob.english IBM i Developer (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban, depuis août 2019
               .infojob.spanish IBM i Developer (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban, depuis août 2019
             .jobs
-              h3.titreH3 Ingénieur étude et développement
+              h3.titreH3 Ingenieur etude et developpement
               .infojob.french Développement sur IBM i (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01, depuis janvier 2019
               .infojob.english IBM i Developer (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01, depuis janvier 2019
               .infojob.spanish IBM i Developer (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01, depuis janvier 2019
@@ -120,7 +120,7 @@ append content
               h3.titreH3.spanish Desarrollador PHP CSS HTML
               .infojob.spanish introducción a JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde, 2012
             .jobs
-              h3.titreH3.french Technicien d&apos;&eacute;tudes en Design et D&eacute;coration
+              h3.titreH3.french Technicien etudes en Design et Decoration
               .infojob.french Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde, 2010-2012
               h3.titreH3.english Design and Decoration Technician
               .infojob.english Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;), La Garde, 2010-2012
@@ -148,14 +148,14 @@ append content
               h3.titreH3.spanish Técnico de esquí y snowboard
               .infojob.spanish Intersport, l&rsquo;Alpe d&rsquo;Huez, 2007-2008
             .jobs
-              h3.titreH3.french Technicien et Administrateur syst&egrave;mes et r&eacute;seaux microsoft
+              h3.titreH3.french Technicien et Administrateur systemes et reseaux microsoft
               h3.titreH3.english Technician and Administrator Systems and Networks microsoft
               h3.titreH3.spanish Técnico y Administrador de Sistemas y Redes microsoft
               .infojob.french Administration serveurs Windows et clients GNU/LINUX Maintenance et installation systemes informatique Developpement html php (script de backup) SECOB, St Jean-de-la-Ruelle, 2005-2007
               .infojob.english Windows server administration and GNU / LINUX clients Maintenance and installation of computer systems, html php development (backup script), SECOB, St Jean-de-la-Ruelle, 2005-2007
               .infojob.spanish Administración de servidores Windows y clientes GNU / LINUX Mantenimiento e instalación de sistemas infojobrmáticos, desarollamiento html php (script de copia de seguridad), SECOB, St Jean-de-la-Ruelle, 2005-2007
             .jobs
-              h3.titreH3.french Technicien Syst&egrave;mes et R&eacute;seaux
+              h3.titreH3.french Technicien Systemes et Reseaux
               .infojob.french Maintenance et installation systemes informatique Developpement html php d&apos;un site de devis securis&eacute; Emergence, Orl&eacute;ans, 2004
               h3.titreH3.english Systems and Networks Technician
               .infojob.english Maintenance and installation of computer systems PHP html development of a secured quote site Emergence, Orléans, 2004
@@ -169,7 +169,7 @@ append content
               h3.titreH3.spanish Asistente del gerente de la tienda
               .infojob.spanish Micromania, St Jean de la Ruelle, 2003
             .jobs
-              h3.titreH3.french Emplois &eacute;tudiant
+              h3.titreH3.french Emplois etudiant
               .infojob.french Conseiller de vente en espace culturel Leclerc, serveur/barman, Ouvrier boulanger, Employ&eacute; polyvalent chez Intermarch&eacute;
               h3.titreH3.english Student jobs
               .infojob.english Cultural sales consultant Leclerc, waiter / bartender, Bakery worker, multi-purpose employee at Intermarché
@@ -180,9 +180,9 @@ append content
             h2.titreH2.english Training
             h2.titreH2.spanish Formación
             .jobs
-              h3.titreH3.french P&eacute;pinière IBM
-              h3.titreH3.english P&eacute;pinière IBM
-              h3.titreH3.spanish P&eacute;pinière IBM
+              h3.titreH3.french Pepiniere IBM
+              h3.titreH3.english Pepiniere IBM
+              h3.titreH3.spanish Pepiniere IBM
               .infojob.french Développement RPG et CL
               .infojob.english Développement RPG et CL
               .infojob.spanish Développement RPG et CL
@@ -193,7 +193,7 @@ append content
               .infojob.english Webservices for IBM i series
               .infojob.spanish Webservices for IBM i series
             .jobs
-              h3.titreH3.french D&eacute;veloppeur JavaScript FullStack
+              h3.titreH3.french Developpeur JavaScript FullStack
               h3.titreH3.english FullStack Javascript Developer
               h3.titreH3.spanish Desarollador Javascript de pila completa
               .infojob.french Développement et management d&apos;un projet web
@@ -206,7 +206,7 @@ append content
               .infojob.english Creating rich web and mobile applications backend JS
               .infojob.spanish Creación de aplicaciones web y móviles ricas en el back-end de JS
             .jobs
-              h3.titreH3.french TP de technicien d&rsquo;&eacute;tude en b&acirc;timent option dessin
+              h3.titreH3.french TP de technicien etude en batiment option dessin
               h3.titreH3.english Construction Engineer Technician Drawing Option
               h3.titreH3.spanish Técnico de Ingeniería de Construcción Opción de Dibujo 
               .infojob Photoshop, Autocad, Archicad, Artlantis
@@ -217,7 +217,7 @@ append content
               .infojob.english Notions of town planning and roads
               .infojob.spanish Nociones de urbanismo y carreteras
             .jobs
-              h3.titreH3 IUT informatique d&apos;Orl&eacute;ans
+              h3.titreH3 IUT informatique Orleans
               .infojob.french Syst&eacute;mes et R&eacute;seaux: Administration et d&eacute;ploiementent r&eacute;seau de syst&egrave;mes en environnement Linux, regexp/assembleur
               .infojob.french Base de Donn&eacute;es: Analyse (merise), conception (MCD, MCT), maintenance
               .infojob.french Programmation: Langage C, C++, SQL, bsh, assembly language
@@ -228,7 +228,7 @@ append content
               .infojob.spanish Base de Datos: Análisis (merise), diseño (MCD, MCT), mantenimiento
               .infojob.spanish Programación: Langage C, C++, SQL, bsh, assembly language
             .jobs
-              h3.titreH3.french Baccalaur&eacute;at Scientifique
+              h3.titreH3.french Baccalaureat Scientifique
               .infojob.french Sp&eacute;cialit&eacute; physique-chimie
               h3.titreH3.english Scientific Baccalaureate Diploma
               .infojob.english Specialty physics-chemistry
