--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -6,10 +6,11 @@ append content
 			#m0ncentrage
 				#INDEX
 					h1.liens
-						.english ADHD and High IQ: 
-						.french TDAH et QI Élevé: 
-						.english What&apos;s the Connection ? 
-						.french Quels liens ?
+						.english ADHD and High IQ
+						.french TDAH et QI fort
+					h2.liens
+						.english What is the Connection 
+						.french Quels liens
 					p.flags
 						img#english(src='/static/img/uk.svg' alt='English' height='30')
 						img#french(src='/static/img/france.svg' alt='Français' height='30')
