breaker fixed + css incoherence in pug

--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -36,8 +36,8 @@ append content
       //h2.titreH2.french Comp&eacute;tences
       //h2.titreH2.spanish  Competencias
       h2.titreH2#skills Skills
-      .informatiquesCont.french.english.spanish#informatique
-        h3.titreH3 Front-End Development
+      .informatiquesCont#informatique
+        h3.titreH3 Front End Development
         .informatiques#informatique
           .infoJeu ECMAScript 6
           .infoJeu jade/PUG
@@ -46,7 +46,7 @@ append content
           .infoJeu SCSS
           .infoJeu BootStrap
           .infoJeu AngularJS
-        h3.titreH3 Back-End Development
+        h3.titreH3 Back End Development
         .informatiques#informatique
           .infoJeu NodeJS
           .infoJeu ExpressJS
@@ -63,10 +63,10 @@ append content
           .infoJeu Git
           .infoJeu AutoCAD
           .infoJeu Photoshop
-      .btp#btp.french.english.spanish
-        h3.titreH3.french Techniques &amp; Design
-        h3.titreH3.english Techniques &amp; Design
-        h3.titreH3.spanish Técnicas &amp; diseño
+      .btp#btp
+        h3.titreH3.french Techniques Design
+        h3.titreH3.english Techniques Design
+        h3.titreH3.spanish Técnicas diseño
         .info.french R&eacute;aliser l&rsquo;&eacute;tude technique d&rsquo;un projet de construction et en estimer le co&ucirc;t
         .info.english Conduct the technical study of a construction project and estimate the cost
         .info.spanish Estudio técnico de un proyecto de construcción y estimación del costo
@@ -76,7 +76,7 @@ append content
         .infolast.french R&eacute;aliser un dossier de d&eacute;tails d&rsquo;ex&eacute;cutions de projet (Autocad, VectorWorks)
         .infolast.english Make a project execution details folder (Autocad, VectorWorks)
         .infolast.spanish Creación de carpetas de detalles de ejecución de proyectos (Autocad, VectorWorks)
-      .commerciales#commerciales.french.english.spanish
+      .commerciales#commerciales
         h3.titreH3 H to H
         .info.french Assistant r&eacute;gie au Palais des Festivals de Cannes et en boite de productions t&eacute;l&eacute;visuelles
         .info.english Assistant director at Palais des Festivals in Cannes and in a television productions company
