--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -14,7 +14,7 @@ append content
 					p.flags
 						img#english(src='/static/img/uk.svg' alt='English' height='30')
 						img#french(src='/static/img/france.svg' alt='Français' height='30')
-					h3.auteurs
+					h4.auteurs
 						.english Written by:
 						.french Ecrit par:
 						span Lynn-nore Chittom
@@ -121,7 +121,7 @@ append content
 							span.french Impulsivité
 					h2.how
 						span.english How the ADHD Hides
-						span.french Comment le TDAH se camoufle-t-il ?
+						span.french Comment le TDAH se camoufle
 					p.first
 						span.english
 							| Children with high IQ levels are often able to circumvent detection of their ADHD if
