--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -64,9 +64,7 @@ append content
           .infoJeu AutoCAD
           .infoJeu Photoshop
       .btp#btp
-        h3.titreH3.french Techniques Design
-        h3.titreH3.english Techniques Design
-        h3.titreH3.spanish Técnicas diseño
+        h3.titreH3 Techniques Design
         .info.french R&eacute;aliser l&rsquo;&eacute;tude technique d&rsquo;un projet de construction et en estimer le co&ucirc;t
         .info.english Conduct the technical study of a construction project and estimate the cost
         .info.spanish Estudio técnico de un proyecto de construcción y estimación del costo
