--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -7,7 +7,7 @@ append content
 				#INDEX
 					h1.liens
 						.english ADHD and High IQ
-						.french TDAH et QI fort
+						.french TDAH et haut potentiel
 					h2.liens
 						.english What is the Connection 
 						.french Quels liens
