--- a/public/index.pug
+++ b/public/index.pug
@@ -10,7 +10,7 @@ append content
               source( src='/static/video/theOneFinal.webm' type='video/webm')
             button#BtnJs0nPl4Y PLAY
             h2 My name is Mikael 
-            h2 I am an IBM RPG &amp; Javascript Developer
+            h2 I am a Javascript and IBM Developer
             include jeuCV.pug
             .paraFoot This website hosts my skills, projects and experiences.
             #s0leil
